first.c
/* Generated by re2c 0.16 on Thu May  5 23:17:53 2016 */
#line 1 "first.re"
#include <limits.h>
#include <stdio.h>
#include <stdbool.h>

bool adddgt(unsigned long *u, unsigned int d, int base)
{
    if (*u > (ULONG_MAX - d) / base) {
        return false;
    }
    *u = *u * base + d;
    return true;
}

bool lex(const char *s, unsigned long *u)
{
    const char *YYMARKER;
    const char *YYCTXMARKER;
    *u = 0;

    #line 26 "first.re"


    
#line 27 "first.c"
{
	char yych;
	yych = *s;
	YYCTXMARKER = s;
	switch (yych) {
	case '0':	goto yy4;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy6;
	default:	goto yy2;
	}
yy2:
	++s;
#line 29 "first.re"
	{ return false; }
#line 49 "first.c"
yy4:
	yych = *(YYMARKER = ++s);
	switch (yych) {
	case 'B':
	case 'b':	goto yy8;
	case 'X':
	case 'x':	goto yy10;
	default:	goto yy5;
	}
yy5:
#line 31 "first.re"
	{ goto oct; }
#line 62 "first.c"
yy6:
	++s;
	s = YYCTXMARKER;
#line 32 "first.re"
	{ goto dec; }
#line 68 "first.c"
yy8:
	yych = *++s;
	YYCTXMARKER = s;
	switch (yych) {
	case '0':
	case '1':	goto yy11;
	default:	goto yy9;
	}
yy9:
	s = YYMARKER;
	goto yy5;
yy10:
	yych = *++s;
	YYCTXMARKER = s;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy13;
	default:	goto yy9;
	}
yy11:
	++s;
	s = YYCTXMARKER;
#line 30 "first.re"
	{ goto bin; }
#line 113 "first.c"
yy13:
	++s;
	s = YYCTXMARKER;
#line 33 "first.re"
	{ goto hex; }
#line 119 "first.c"
}
#line 34 "first.re"


bin:
    
#line 126 "first.c"
{
	char yych;
	yych = *s;
	switch (yych) {
	case 0x00:	goto yy17;
	case '0':
	case '1':	goto yy21;
	default:	goto yy19;
	}
yy17:
	++s;
#line 39 "first.re"
	{ return true; }
#line 140 "first.c"
yy19:
	++s;
#line 38 "first.re"
	{ return false; }
#line 145 "first.c"
yy21:
	++s;
#line 40 "first.re"
	{ if (!adddgt(u, s[-1] - '0', 2)) return false; goto bin; }
#line 150 "first.c"
}
#line 41 "first.re"


oct:
    
#line 157 "first.c"
{
	char yych;
	yych = *s;
	switch (yych) {
	case 0x00:	goto yy25;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':	goto yy29;
	default:	goto yy27;
	}
yy25:
	++s;
#line 46 "first.re"
	{ return true; }
#line 177 "first.c"
yy27:
	++s;
#line 45 "first.re"
	{ return false; }
#line 182 "first.c"
yy29:
	++s;
#line 47 "first.re"
	{ if (!adddgt(u, s[-1] - '0', 8)) return false; goto oct; }
#line 187 "first.c"
}
#line 48 "first.re"


dec:
    
#line 194 "first.c"
{
	char yych;
	yych = *s;
	switch (yych) {
	case 0x00:	goto yy33;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy37;
	default:	goto yy35;
	}
yy33:
	++s;
#line 53 "first.re"
	{ return true; }
#line 216 "first.c"
yy35:
	++s;
#line 52 "first.re"
	{ return false; }
#line 221 "first.c"
yy37:
	++s;
#line 54 "first.re"
	{ if (!adddgt(u, s[-1] - '0', 10)) return false; goto dec; }
#line 226 "first.c"
}
#line 55 "first.re"


hex:
    
#line 233 "first.c"
{
	char yych;
	yych = *s;
	switch (yych) {
	case 0x00:	goto yy41;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy45;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':	goto yy47;
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy49;
	default:	goto yy43;
	}
yy41:
	++s;
#line 60 "first.re"
	{ return true; }
#line 267 "first.c"
yy43:
	++s;
#line 59 "first.re"
	{ return false; }
#line 272 "first.c"
yy45:
	++s;
#line 61 "first.re"
	{ if (!adddgt(u, s[-1] - '0', 16))      return false; goto hex; }
#line 277 "first.c"
yy47:
	++s;
#line 63 "first.re"
	{ if (!adddgt(u, s[-1] - 'A' + 10, 16)) return false; goto hex; }
#line 282 "first.c"
yy49:
	++s;
#line 62 "first.re"
	{ if (!adddgt(u, s[-1] - 'a' + 10, 16)) return false; goto hex; }
#line 287 "first.c"
}
#line 64 "first.re"

}

int main(int argc, char **argv)
{
    for (int i = 1; i < argc; ++i) {
        unsigned long u;
        if (lex(argv[i], &u)) {
            printf("%lu\n", u);
        } else {
            printf("error\n");
        }
    }
    return 0;
}
